syntax = "proto3";

package cdn.cloud_api.proto.model;

import "cdn/cloud_api/proto/model/common.proto";

option go_package = "a.yandex-team.ru/cdn/cloud_api/proto/model";

message OriginsGroup {
    int64 id = 1;
    string folder_id = 2;
    string name = 3;
    bool use_next = 4;
    repeated Origin origins = 5;

    VersionMeta version_meta = 100;
}

message Origin {
    int64 id = 1;
    string folder_id = 2;
    string source = 3;
    bool enabled = 4;
    bool backup = 5;
    OriginType type = 6;
}

enum OriginType {
    ORIGIN_TYPE_UNSPECIFIED = 0;
    COMMON = 1;
    BUCKET = 2;
    WEBSITE = 3;
}
