syntax = "proto3";

package cdn.cloud_api.proto.userapi;

import "google/api/annotations.proto";

import "cdn/cloud_api/proto/model/origins.proto";

option go_package = "a.yandex-team.ru/cdn/cloud_api/proto/userapi";

service OriginService {
    rpc CreateOrigin(CreateOriginRequest) returns (model.Origin) {
        option (google.api.http) = {
            post: "/userapi/origins_groups/{group_id}/origins"
            body: "*"
        };
    }

    rpc GetOrigin(GetOriginRequest) returns (model.Origin) {
        option (google.api.http) = {
            get: "/userapi/origins_groups/{group_id}/origins/{origin_id}"
        };
    }

    rpc ListOrigins(ListOriginsRequest) returns (ListOriginsResponse) {
        option (google.api.http) = {
            get: "/userapi/origins_groups/{group_id}/origins"
        };
    }

    rpc UpdateOrigin(UpdateOriginRequest) returns (model.Origin) {
        option (google.api.http) = {
            put: "/userapi/origins_groups/{group_id}/origins/{origin_id}"
            body: "*"
        };
    }

    rpc DeleteOrigin(DeleteOriginRequest) returns (DeleteOriginResponse) {
        option (google.api.http) = {
            delete: "/userapi/origins_groups/{group_id}/origins/{origin_id}"
        };
    }
}

message CreateOriginRequest {
    string folder_id = 1;
    int64 group_id = 2;
    string source = 3;
    bool enabled = 4;
    bool backup = 5;
    model.OriginType type = 6;
}

message GetOriginRequest {
    int64 group_id = 1;
    int64 origin_id = 2;
}

message ListOriginsRequest {
    int64 group_id = 1;
}

message ListOriginsResponse {
    repeated model.Origin origins = 1;
}

message UpdateOriginRequest {
    int64 group_id = 1;
    int64 origin_id = 2;
    string source = 3;
    bool enabled = 4;
    bool backup = 5;
    model.OriginType type = 6;
}

message DeleteOriginRequest {
    int64 group_id = 1;
    int64 origin_id = 2;
}

message DeleteOriginResponse {}
