syntax = "proto3";

package cdn.cloud_api.proto.userapi;

import "cdn/cloud_api/proto/model/origins.proto";
import "cdn/cloud_api/proto/model/resource.proto";

option go_package = "a.yandex-team.ru/cdn/cloud_api/proto/userapi";

// ===========================================================
// Resource
// ===========================================================

message CreateResourceRequest {
    message OriginVariant {
        oneof variant {
            int64 origin_group_id = 1;
            ResourceCreateOriginsGroupParams origin_source_params = 2;
        }
    }

    string folder_id = 1;
    OriginVariant origin_variant = 2;
    repeated string secondary_hostnames = 3;
    model.OriginProtocol origin_protocol = 4;
    bool active = 5;
    string name = 6;
    model.ResourceOptions options = 7;
}

message ResourceCreateOriginsGroupParams {
    string source = 1;
    model.OriginType type = 2;
}

message GetResourceRequest {
    string resource_id = 1;
}

message ListResourcesRequest {
    string folder_id = 1;

    uint32 page_size = 100; // can be zero, then the default size is used
    uint32 page_token = 101;
}

message ListResourcesResponse {
    repeated model.Resource resources = 1;

    uint32 next_page_token = 100;
}

message UpdateResourceRequest {
    string resource_id = 1;
    optional int64 origins_group_id = 2;
    OptionalStringList secondary_hostnames = 3;
    optional model.OriginProtocol origin_protocol = 4;
    bool active = 5;
    model.ResourceOptions options = 6;
}

message OptionalStringList {
    repeated string values = 1;
}

message DeleteResourceRequest {
    string resource_id = 1;
}

message DeleteResourceResponse {}

message ActivateResourceRequest {
    string resource_id = 1;
    int64 version = 2;
}

message ActivateResourceResponse {}

message ListResourceVersionsRequest {
    string resource_id = 1;
}

message ListResourceVersionsResponse {
    repeated model.Resource resources = 1;
}

message CalculateResourceDiffRequest {
    string resource_id = 1;
    int64 version_left = 2;
    int64 version_right = 3;
}

message CalculateResourceDiffResponse {
    string diff = 1;
}

// ===========================================================
// Resource rule
// ===========================================================

message CreateResourceRuleRequest {
    string resource_id = 1;
    int64 resource_version = 2;
    string name = 3;
    string pattern = 4;
    optional int64 origins_group_id = 5;
    optional model.OriginProtocol origin_protocol = 6;
    model.ResourceOptions resource_options = 7;
}

message GetResourceRuleRequest {
    string resource_id = 1;
    int64 rule_id = 2;
}

message ListResourceRulesRequest {
    string resource_id = 1;
    optional int64 resource_version = 2; // if this is missing, then he version of the active resource will be used
}

message ListResourceRulesResponse {
    repeated model.ResourceRule rules = 1;
}

message UpdateResourceRuleRequest {
    string resource_id = 1;
    int64 resource_version = 2;
    int64 rule_id = 3;
    string name = 4;
    string pattern = 5;
    optional int64 origins_group_id = 6;
    optional model.OriginProtocol origin_protocol = 7;
    model.ResourceOptions resource_options = 8;
}

message DeleteResourceRuleRequest {
    string resource_id = 1;
    int64 rule_id = 2;
}

message DeleteResourceRuleResponse {}
